--- a/KayitSistemi/KayitSistemi/KayitSistemi.csproj
+++ b/KayitSistemi/KayitSistemi/KayitSistemi.csproj
@@ -47,12 +47,19 @@
     <Compile Include="Course.cs" />
     <Compile Include="Doktora.cs" />
     <Compile Include="DProgram.cs" />
-    <Compile Include="LisansOgrenci.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Fakulte.cs" />
+    <Compile Include="Fakulteler.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Fakulteler.Designer.cs">
+      <DependentUpon>Fakulteler.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LisansOgrenci.cs" />
+    <Compile Include="Universiteler.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Universiteler.Designer.cs">
+      <DependentUpon>Universiteler.cs</DependentUpon>
     </Compile>
     <Compile Include="Ogrenci.cs" />
     <Compile Include="OgrentimUyesi.cs" />
@@ -60,8 +67,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Universite.cs" />
     <Compile Include="YuksekLisansOgrenci.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Fakulteler.resx">
+      <DependentUpon>Fakulteler.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Universiteler.resx">
+      <DependentUpon>Universiteler.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
