--- a/KayitSistemi/KayitSistemi/KayitSistemi.csproj
+++ b/KayitSistemi/KayitSistemi/KayitSistemi.csproj
@@ -44,7 +44,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bolumler.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Bolumler.Designer.cs">
+      <DependentUpon>Bolumler.cs</DependentUpon>
+    </Compile>
     <Compile Include="Course.cs" />
+    <Compile Include="DerslerVeOgrenciler.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DerslerVeOgrenciler.Designer.cs">
+      <DependentUpon>DerslerVeOgrenciler.cs</DependentUpon>
+    </Compile>
     <Compile Include="Doktora.cs" />
     <Compile Include="DProgram.cs" />
     <Compile Include="Fakulte.cs" />
@@ -67,6 +79,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Universite.cs" />
     <Compile Include="YuksekLisansOgrenci.cs" />
+    <EmbeddedResource Include="Bolumler.resx">
+      <DependentUpon>Bolumler.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DerslerVeOgrenciler.resx">
+      <DependentUpon>DerslerVeOgrenciler.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Fakulteler.resx">
       <DependentUpon>Fakulteler.cs</DependentUpon>
     </EmbeddedResource>
